Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(text var)
    end
end
